--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: My webpage
 username: Jeff Drocco
 user_description: Cupertino, Notre Dame, Princeton, LANL, LLNL
 user_title: Scientist
-email: jeff@drocco.org
+email: jdrocco@gmail.com
 facebook_username: jeff.drocco
 github_username:  jdrocco
 linkedin_username:  jeffdrocco
