--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ description: My webpage
 username: Jeff Drocco
 user_description: Cupertino, Notre Dame, Princeton, LANL, LLNL
 user_title: Scientist
-email: jdrocco@gmail.com
-facebook_username: jeff.drocco
+email: jeff@drocco.org
+pubmed_author: Drocco+J
 github_username:  jdrocco
 linkedin_username:  jeffdrocco
 
