--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ google-analytics:
   id: "UA-96997533-1"
   
 # SEO tags
-gems:
+plugins:
   - jekyll-seo-tag
 
 exclude: ['package.json', 'src' , 'node_modules']
