Updating old links

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ user_title: Scientist
 email: jeff@drocco.org
 pubmed_author: Drocco+J
 github_username:  jdrocco
-linkedin_username:  jeffdrocco
+linkedin_username:  jeff-drocco-6378731b2
 
 # Google-analytics
 google-analytics:
